--- a/templates/workflow/reports_dashboard.html
+++ b/templates/workflow/reports_dashboard.html
@@ -35,6 +35,7 @@
                             </div>
                         </div>
                         
+                        {% if can_view_financials %}
                         <div class="col-md-3 mb-4">
                             <div class="card h-100">
                                 <div class="card-body text-center">
@@ -45,6 +46,7 @@
                                 </div>
                             </div>
                         </div>
+                        {% endif %}
                     </div>
                     
                     <div class="row mt-4">
