--- a/templates/workflow/base.html
+++ b/templates/workflow/base.html
@@ -8,7 +8,8 @@
     {% load workflow_filters %}
     {% load jdate_filters %}
     <!-- Favicon -->
-    <link rel="shortcut icon" href="{% static 'favicon.png' %}" type="image/png">
+    <link rel="shortcut icon" href="{% static 'favicon.ico' %}" type="image/x-icon">
+    <link rel="icon" href="{% static 'favicon.png' %}" type="image/png">
     <!-- Bootstrap RTL CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.rtl.min.css">
     <!-- FontAwesome -->
