--- a/templates/workflow/base.html
+++ b/templates/workflow/base.html
@@ -8,8 +8,8 @@
     {% load workflow_filters %}
     {% load jdate_filters %}
     <!-- Favicon -->
-    <link rel="shortcut icon" href="{% static 'favicon.ico' %}" type="image/x-icon">
-    <link rel="icon" href="{% static 'favicon.png' %}" type="image/png">
+    <link rel="shortcut icon" href="/static/favicon.one" type="image/x-icon">
+    <link rel="icon" href="/static/favicon.one.png" type="image/png">
     <!-- Bootstrap RTL CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.rtl.min.css">
     <!-- FontAwesome -->
@@ -29,7 +29,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
             <a class="navbar-brand" href="{% url 'dashboard' %}">
-                <img src="{% static 'img/logo.png' %}" alt="شیرینی بی بی" height="40" class="d-inline-block align-text-middle me-2">
+                <img src="/static/img/logo.one" alt="شیرینی بی بی" height="40" class="d-inline-block align-text-middle me-2">
                 سامانه سفارش انبار
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
